<resources>
    <string name="app_name">Furniture</string>
    <string name="order_food">Order Food</string>
    <string name="sell_food">Sell Food</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="password">PassWord</string>
    <string name="forget_password">Forget PassWord ?</string>
    <string name="don_t_have_account_press">don\'t have account ? press</string>
    <string name="here">here</string>
    <string name="restaurant_name">Restaurant Name</string>
    <string name="delivery_time">Delivery Time</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="delivery_cost">Delivery Cost</string>
    <string name="minimum_order">Minimum Charge</string>
    <string name="follow">Follow</string>
    <string name="contact_data">Contact Data</string>
    <string name="phone">Phone</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="store_photo">Store Photo</string>
    <string name="store">Store</string>
    <string name="name">Name</string>
    <string name="profile_pic">profile pic</string>
    <string name="select_your_city">Select your City</string>
    <string name="select_your_region">Select your Region</string>
    <string name="please_enter_your_email">Please Enter Your Email</string>
    <string name="send">Send</string>
    <string name="code">Code</string>
    <string name="title_activity_main2" translatable="false">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard" translatable="false">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="order_list">Order List</string>
    <string name="profile">Profile</string>
    <string name="title_activity_main3" translatable="false">Main3Activity</string>
    <string name="image">image</string>
    <string name="restaurant_image">restaurant image</string>
    <string name="please_wait">Please Wait</string>
    <string name="new_order">New Order</string>
    <string name="current_order">Current Order</string>
    <string name="previous_order">Previous Order</string>
    <string name="delivery_confirm">Delivery Confirm</string>
    <string name="order_num">Order num:</string>
    <string name="t_cost">T.Cost:</string>
    <string name="address">Address:</string>
    <string name="menu_list">MENU</string>
    <string name="comment_rating"> Rating</string>
    <string name="store_info">Info</string>
    <string name="edit">Edit</string>
    <string name="more">More</string>
    <string name="state">State</string>
    <string name="offers">Offers</string>
    <string name="sign_out">Sign Out</string>
    <string name="change_password">Change Password</string>
    <string name="about_app">About App</string>
    <string name="contact_us">Contact Us</string>
    <string name="who_we_are">Who Are We ?</string>
    <string name="new_offers">New Offers</string>
    <string name="details">Details</string>
    <string name="full_name">Full Name</string>
    <string name="user_message">What\'s  Your Message ?</string>
    <string name="complain">Complain</string>
    <string name="suggestion">Suggestion</string>
    <string name="category">Category</string>
    <string name="cancel">Cancel</string>
    <string name="comfirm_delivery">Confirm Delivery</string>
    <string name="deliveried">Deliveried</string>
    <string name="declined">Decline</string>
    <string name="are_you_sure_to_logout">Are You Sure To Logout</string>
    <string name="cost">Cost:</string>
    <string name="your_data_is_registered">Your Data Is Registered</string>
    <string name="accept">Accept</string>
    <string name="call">Call</string>
    <string name="category_picture">Category picture</string>
    <string name="category_name">Category Name</string>
    <string name="add">Add</string>
    <string name="edit_category">Edit Category</string>
    <string name="special_order">Special Order</string>
    <string name="enter_your_order">Enter Your Order</string>
    <string name="quantity">Quantity</string>
    <string name="increase">increase</string>
    <string name="decrease">decrease</string>
    <string name="minus" translatable="false">-</string>
    <string name="plus" translatable="false">+</string>
    <string name="value" translatable="false">1</string>
    <string name="todo" translatable="false">TODO</string>
    <string name="item_picture">Item picture</string>
    <string name="item_name">Item Name</string>
    <string name="description">Description</string>
    <string name="price">Price</string>
    <string name="offer_price">Offer Price</string>
    <string name="city">City</string>
    <string name="total_cost">Total Cost</string>
    <string name="confirm">Confirm</string>
    <string name="happy_to_see_your_comment">Happy To See Your Comment</string>
    <string name="add_comment_or_rating">Add Comment or Rating</string>
    <string name="regionDataModel">Region</string>
    <string name="add_notes">Add Notes</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="order_details">Order Details</string>
    <string name="pay_cash_on_delivery">Pay Cash On Delivery</string>
    <string name="pay_online">Pay Online</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="my_offers">My Offers</string>
    <string name="add_offers">Add Offers</string>
    <string name="offer_name">Offer Name</string>
    <string name="offer_des">Offer Description</string>
    <string name="from">From:</string>
    <string name="to">To:</string>
    <string name="edit_offers">Edit Offer</string>
    <string name="old_password">Old Password</string>
    <string name="change">Change</string>
    <string name="new_password">New Password</string>
    <string name="edit_item">Edit Item</string>
    <string name="add_item">Add Item</string>
    <string name="please_enter_your_code">Please enter sent code</string>
    <string name="please_enter_your_new_password">Please enter your new password</string>
    <string name="login_access">تسجيل الدخول</string>
    <string name="reg">أو سجل عن طريق</string>
    <string name="forgot_password2"><u>نسيت كلمة المرور؟</u></string>
    <string name="facebook_reg">تسجيل عن طريق f</string>
    <string name="google_reg">تسجيل عن طريق G</string>
    <string name="no_account_reg">ليس لديك حساب؟ تسجيل</string>
    <string name="email_only">البريد الالكتروني</string>
    <string name="password_hint">كلمة السر</string>
    <string name="password_hide_iv">password hide</string>
    <string name="reg_access">انشاء حساب</string>
    <string name="name_enter">الاسم</string>
    <string name="email_enter">البريد الالكتروني</string>
    <string name="phone_enter">الهاتف</string>
    <string name="address_enter">العنوان</string>
    <string name="have_account_reg">لديك حساب؟ تسجيل دخول</string>
    <string name="nav_home">الرئيسية</string>
    <string name="nav_favorite">المفضلة</string>
    <string name="nav_shopping">تسوق</string>
    <string name="nav_orders">الطلبات</string>
    <string name="nav_profile">البروفايل</string>
    <string name="search_furniture">ابحث عن أثاث</string>
    <string name="order_now">اطلب الآن</string>
    <string name="furn_info">معلومات عن المعرض</string>
    <string name="rating">التقييم</string>
    <string name="furn_page">صفحة المعرض</string>
    <string name="type_of_expo">معرض أثاث</string>
    <string name="name_of_expo">ارت هاوس</string>
    <string name="address_of_expo">كليوباترا، ش الكورنيش، أمام إشارة كليوباترا</string>


    <string name="facebook_app_id">352949043540920</string>
    <string name="fb_login_protocol_scheme">fb352949043540920</string>
    <string name="facebook_client_token">d8766fae969f1fcd171be527bb799fe5</string>
    <string name="exploreBestFurn">اكتشف أحسن الأثاث</string>
    <string name="back">back</string>
    <string name="search_product_or_expo">ابحث عن معرض أو منتج</string>
    <string name="password_confirm_hint">تأكيد كلمة السر</string>
    <string name="show_offers">عروض التوفير</string>
    <string name="waiting">برجاء الانتظار</string>
    <string name="expos">معارض</string>
    <string name="expo_rating">5000 تقييم</string>
    <string name="commenting_count">1254 تقييم</string>
    <string name="share_comment">شارك التقييم</string>
    <string name="comments">التقييمات</string>
    <string name="your_comment">تقييمك للمطعم</string>
    <string name="commenting_et_hint">شارك تقييمك للمعرض وساعد الناس لتستفيد من تجربتك</string>

</resources>