<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <data>

    </data>


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_200sdp"
                    android:background="@drawable/ic_log"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/login_access"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/login_access"
                    android:layout_marginBottom="@dimen/_20sdp"
                    android:textSize="@dimen/_30ssp"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:layout_marginTop="@dimen/_20sdp"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:background="@drawable/shape_rounded_corners_rect">

                    <EditText
                        android:id="@+id/fragment_login_username_et"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_gravity="center"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_marginEnd="@dimen/_8sdp"
                        android:background="@null"
                        android:hint="@string/email_only"
                        android:inputType="textEmailAddress"
                        android:paddingStart="@dimen/_8sdp"
                        android:paddingEnd="@dimen/_8sdp"
                        android:textColor="@color/black"
                        android:textColorHint="#989797"
                        android:textDirection="anyRtl"
                        android:textSize="@dimen/_15ssp" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:background="@drawable/shape_rounded_corners_rect">

                    <EditText
                        android:textDirection="anyRtl"
                        android:id="@+id/fragment_login_password_et"
                        android:layout_width="@dimen/_200sdp"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_alignParentEnd="true"
                        android:layout_gravity="center"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_marginEnd="@dimen/_8sdp"
                        android:background="@null"
                        android:hint="@string/password_hint"
                        android:inputType="text"
                        android:paddingStart="@dimen/_8sdp"
                        android:paddingEnd="@dimen/_8sdp"
                        android:textColor="@color/black"
                        android:textColorHint="#989797"
                        android:textSize="@dimen/_15sdp" />

                    <ImageView
                        android:id="@+id/fragment_login_password_hide_iv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginStart="@dimen/_20sdp"
                        android:contentDescription="@string/password_hide_iv"
                        android:src="@drawable/pass"
                        android:scaleType="centerCrop"/>


                </RelativeLayout>
                <Button
                    android:id="@+id/fragment_login_access_btn"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_25sdp"
                    android:background="@drawable/shap_circl_rect_grey"
                    app:backgroundTint="#5F6D7C"
                    android:textColor="@color/white_100"
                    android:text="@string/login_access"
                    android:textSize="@dimen/_20ssp"/>

                <TextView
                    android:id="@+id/fragment_login_forgot_password_tv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_25sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:gravity="center"
                    android:text="@string/forgot_password2"
                    android:textColor="@color/grey"
                    android:textSize="@dimen/_20ssp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:orientation="horizontal">
                    <View
                        android:layout_width="0dp"
                        android:layout_height="3dp"
                        android:layout_marginTop="@dimen/_30sdp"
                        android:layout_weight="1"
                        android:background="@color/light_grey"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_marginEnd="@dimen/_8sdp"
                        android:gravity="center"
                        android:text="@string/reg"
                        android:textColor="@color/grey"
                        android:textSize="@dimen/_20ssp"
                        />
                    <View
                        android:layout_width="0dp"
                        android:layout_height="3dp"
                        android:layout_marginTop="@dimen/_30sdp"
                        android:layout_weight="1"
                        android:background="@color/light_grey"/>
                </LinearLayout>


<!--                <com.facebook.login.widget.LoginButton-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="@dimen/_50sdp"-->
<!--                    android:layout_margin="@dimen/_10sdp"-->
<!--                    android:background="@drawable/shap_circl_rect_grey"-->
<!--                    android:text="@string/facebook_reg"/>-->

                <Button
                    android:id="@+id/fragment_login_facebook_reg_btn"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_25sdp"
                    android:background="@drawable/shap_circl_rect_grey"
                    app:backgroundTint="#298CC1"
                    android:textColor="@color/white_100"
                    android:text="@string/facebook_reg"
                    android:textSize="@dimen/_20ssp"
                    android:textAllCaps="false"/>

                <Button
                    android:id="@+id/fragment_login_google_reg_btn"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_25sdp"
                    android:background="@drawable/shap_circl_rect_grey"
                    app:backgroundTint="#D83B3B"
                    android:textColor="@color/white_100"
                    android:text="@string/google_reg"
                    android:textSize="@dimen/_20ssp"/>

                <TextView
                    android:id="@+id/fragment_login_new_account_tv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_25sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:gravity="center"
                    android:text="@string/no_account_reg"
                    android:textColor="@color/grey"
                    android:textSize="@dimen/_20ssp"
                    android:layout_marginBottom="@dimen/_15sdp"/>



            </LinearLayout>


        </ScrollView>

</layout>