<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <data>

    </data>


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_200sdp"
                    android:background="@drawable/ic_reg_svg"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/reg_access"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/reg_access"
                    android:layout_marginBottom="@dimen/_20sdp"
                    android:textSize="@dimen/_30ssp"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:layout_marginTop="@dimen/_20sdp"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:background="@drawable/shape_rounded_corners_rect">

                    <EditText
                        android:id="@+id/fragment_reg_name_et"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_gravity="center"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_marginEnd="@dimen/_8sdp"
                        android:background="@null"
                        android:hint="@string/name_enter"
                        android:inputType="textAutoComplete"
                        android:paddingStart="@dimen/_8sdp"
                        android:paddingEnd="@dimen/_8sdp"
                        android:textColor="@color/black"
                        android:textColorHint="#989797"
                        android:textDirection="anyRtl"
                        android:textSize="@dimen/_15ssp" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:background="@drawable/shape_rounded_corners_rect">

                    <EditText
                        android:id="@+id/fragment_reg_email_et"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_gravity="center"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_marginEnd="@dimen/_8sdp"
                        android:background="@null"
                        android:hint="@string/email_enter"
                        android:inputType="textEmailAddress"
                        android:paddingStart="@dimen/_8sdp"
                        android:paddingEnd="@dimen/_8sdp"
                        android:textColor="@color/black"
                        android:textColorHint="#989797"
                        android:textDirection="anyRtl"
                        android:textSize="@dimen/_15ssp" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:background="@drawable/shape_rounded_corners_rect">

                    <EditText
                        android:id="@+id/fragment_reg_phone_et"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_gravity="center"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_marginEnd="@dimen/_8sdp"
                        android:background="@null"
                        android:hint="@string/phone_enter"
                        android:inputType="phone"
                        android:paddingStart="@dimen/_8sdp"
                        android:paddingEnd="@dimen/_8sdp"
                        android:textColor="@color/black"
                        android:textColorHint="#989797"
                        android:textDirection="anyRtl"
                        android:textSize="@dimen/_15ssp" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:background="@drawable/shape_rounded_corners_rect">

                    <EditText
                        android:id="@+id/fragment_reg_address_et"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_gravity="center"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_marginEnd="@dimen/_8sdp"
                        android:background="@null"
                        android:hint="@string/address_enter"
                        android:inputType="textMultiLine"
                        android:paddingStart="@dimen/_8sdp"
                        android:paddingEnd="@dimen/_8sdp"
                        android:textColor="@color/black"
                        android:textColorHint="#989797"
                        android:textDirection="anyRtl"
                        android:textSize="@dimen/_15ssp" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:background="@drawable/shape_rounded_corners_rect">

                    <EditText
                        android:textDirection="anyRtl"
                        android:id="@+id/fragment_reg_password_et"
                        android:layout_width="@dimen/_200sdp"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_alignParentEnd="true"
                        android:layout_gravity="center"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_marginEnd="@dimen/_8sdp"
                        android:background="@null"
                        android:hint="@string/password_hint"
                        android:inputType="textPassword"
                        android:paddingStart="@dimen/_8sdp"
                        android:paddingEnd="@dimen/_8sdp"
                        android:textColor="@color/black"
                        android:textColorHint="#989797"
                        android:textSize="@dimen/_15sdp" />

                    <ImageView
                        android:id="@+id/fragment_reg_password_hide_iv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:layout_marginStart="@dimen/_20sdp"
                        android:contentDescription="@string/password_hide_iv"
                        android:src="@drawable/pass"
                        android:scaleType="centerCrop"/>


                </RelativeLayout>


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:background="@drawable/shape_rounded_corners_rect">

                    <EditText
                        android:textDirection="anyRtl"
                        android:id="@+id/fragment_reg_password_confirmation_et"
                        android:layout_width="@dimen/_200sdp"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_alignParentEnd="true"
                        android:layout_gravity="center"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_marginEnd="@dimen/_8sdp"
                        android:background="@null"
                        android:hint="@string/password_confirm_hint"
                        android:inputType="textPassword"
                        android:paddingStart="@dimen/_8sdp"
                        android:paddingEnd="@dimen/_8sdp"
                        android:textColor="@color/black"
                        android:textColorHint="#989797"
                        android:textSize="@dimen/_15sdp" />

                    <ImageView
                        android:id="@+id/fragment_reg_password_confirmation_hide_iv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:layout_marginStart="@dimen/_20sdp"
                        android:contentDescription="@string/password_hide_iv"
                        android:src="@drawable/pass"
                        android:scaleType="centerCrop"/>


                </RelativeLayout>

                <Button
                    android:id="@+id/fragment_reg_access_btn"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_25sdp"
                    android:background="@drawable/shap_circl_rect_grey"
                    app:backgroundTint="#5F6D7C"
                    android:textColor="@color/white_100"
                    android:text="@string/reg_access"
                    android:textSize="@dimen/_20ssp"/>


                <TextView
                    android:id="@+id/fragment_reg_have_account_tv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_25sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:gravity="center"
                    android:text="@string/have_account_reg"
                    android:textColor="@color/grey"
                    android:textSize="@dimen/_20ssp"
                    android:layout_marginBottom="@dimen/_15sdp"/>



            </LinearLayout>


        </ScrollView>

</layout>